app/frontend/stylesheets/segment.css
:root {
  --table-bar-color: color-mix(
    in srgb,
    var(--color-sensor-house) 25%,
    transparent
  );
}

.dark {
  --table-bar-color: color-mix(
    in srgb,
    var(--color-sensor-house) 75%,
    transparent
  );
}

.segment {
  @apply flex items-center justify-center overflow-hidden px-2 text-center leading-none transition-[font-size,height] motion-safe:duration-1000 motion-reduce:duration-100 sm:px-4;

  container-type: size;

  --icon-size: clamp(16px, 1.2vw, 22px);
  --value-size: clamp(16px, 1vw, 20px);
  --title-size: clamp(17px, 1.5vw, 22px);

  @variant md {
    --icon-size: clamp(20px, 0.8vw, 26px);
    --value-size: clamp(20px, 0.7vw, 24px);
    --title-size: clamp(22px, 1.2vw, 30px);
  }
}

.segment.segment-inline {
  --value-size: clamp(16px, 1vw, 20px);
  --title-size: clamp(12px, 1vw, 16px);

  @variant md {
    --value-size: clamp(20px, 0.7vw, 24px);
    --title-size: clamp(20px, 1vw, 24px);
  }
}

.segment.segment-inline {
  .content {
    @apply flex w-full flex-row items-center justify-between gap-2;
  }

  .icon {
    @apply hidden;
  }

  .title {
    @apply text-left;
  }

  .value {
    @apply text-right;
  }
}

/* STATE 1: Empty */

.segment .icon {
  font-size: 0;
  @apply transition-[font-size];
}

.segment .title {
  font-size: 0;
  @apply transition-[font-size];
}

.segment .value {
  font-size: 0;
}

/* STATE 2: Icon only */
@container (min-height: 30px) {
  .segment .icon {
    font-size: calc(var(--icon-size) * 0.9);
  }
}

/* STATE 3: Side by side */
@container (min-height: 40px) {
  .content {
    @apply flex flex-row items-center justify-center gap-2;
  }

  .segment .icon {
    font-size: calc(var(--icon-size));
  }

  .segment .value {
    font-size: var(--value-size);
    @apply min-w-0 flex-1 transition-[font-size];
  }
}

/* STATE 4: Stacked without title */
@container (min-height: 130px) {
  .segment .content {
    @apply flex-col;
  }

  .segment .icon {
    font-size: calc(var(--icon-size) * 1.3 * var(--icon-scale, 1));
  }

  .segment .value {
    font-size: calc(var(--value-size) * 1.2);
  }
}

/* STATE 5: Stacked with title */
@container (min-height: 210px) {
  .segment .content {
    @apply flex flex-col items-center justify-center gap-3;
  }

  .segment .title {
    @apply block text-center;
    font-size: var(--title-size);
  }

  .segment .icon {
    font-size: calc(var(--icon-size) * 1.5 * var(--icon-scale, 1));
  }

  .segment .value {
    font-size: calc(var(--value-size) * 1.3);
  }
}

/* Inline segments */

@container (min-height: 25px) {
  .segment.segment-inline .title {
    font-size: calc(var(--value-size) * 0.9);
  }

  .segment.segment-inline .value {
    font-size: calc(var(--value-size) * 1);
  }
}

@container (min-height: 30px) {
  .segment.segment-inline .title {
    font-size: calc(var(--value-size) * 1);
  }

  .segment.segment-inline .value {
    font-size: calc(var(--value-size) * 1.1);
  }
}

@container (min-height: 100px) {
  .segment.segment-inline .title {
    font-size: calc(var(--value-size) * 1.1);
  }

  .segment.segment-inline .value {
    font-size: calc(var(--value-size) * 1.2);
  }
}

